# dsp-manager

./: .gitignore  LICENSE  README.md
be/: .gitignore  Makefile  README.md  docker-compose.yml  init-mongo.js  pyproject.toml
be/src/dsp_be/: event_handlers.py  main.py  settings.py
be/src/dsp_be/logic/: __init__.py  config.py  factory.py  machine.py  planet.py  recipe.py  stack.py  star.py
be/src/dsp_be/logic/test/: recipe_test.py
be/src/dsp_be/motor/: __init__.py  config.py  driver.py  factory.py  planet.py  star.py
be/src/dsp_be/routes/: common.py  dsp.py  dto.py  factories.py  factories_dto.py  models.py  planets.py  planets_dto.py  router.py  stars.py  stars_dto.py
be/src/dsp_be/routes/test/: conftest.py  factories_test.py  planets_test.py  stars_test.py
fe/: README.md  package-lock.json  package.json
fe/src/: factory.js  index.css  index.js  machines.js  planet_view.js  recipes.js  star_view.js  system_view.js
fe/src/components/: entity_card.js  entity_card_content_combined.js  entity_card_content_split.js
my-app-cls/src/: index.js
